--- a/Day3/temp.css
+++ b/Day3/temp.css
@@ -1,5 +1,9 @@
 h1{
     background-color: brown;
-    color:rgb(239, 239, 245);
+    color:rgb(239, 239, 245)vc;
     text-align: center;
+    padding: 5px;
+    border: 5px solid;
+    margin: 5px;
+
 }
