--- a/Day7/FrontendPractice/src/Css/Navbar.css
+++ b/Day7/FrontendPractice/src/Css/Navbar.css
@@ -1,27 +1,50 @@
 ol{
-    display: flex;
+    display:flex;
     justify-content: space-between;
     text-decoration: none;
-    list-style-type: none ;
-    margin: 0;
-    padding: 10px;
-    background-color: rgb(255, 5, 5);
-    color: aliceblue;
-
+    list-style-type: none;
+    margin:0; 
+    padding:10px;
+    background-color: rgb(22, 24, 27);
+    color:rgb(208, 60, 60);
+    font-size: large;
+    font-weight: bold;
 }
-
-.Link
-{
- text-decoration: none;
- cursor: pointer;
- color: aliceblue;
- padding: 2px;
-
+.link{
+    text-decoration: none;
+    color:white;
+    padding:4px;
 }
+.link:hover{
 
-.Link:hover
-{
-    background-color: aliceblue;
-    color:rgb(255, 5, 5);
+    background-color:white;
+    color: rgb(9, 13, 135);
     border-radius: 10px;
+}
+.dropdown {
+    position: relative;
+}
+
+.dropdown-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgb(33, 214, 208);
+    width: 200px;
+    display: block;
+    border-radius: 5px;
+}
+.dropdown-menu li {
+    padding: 10px;
+}
+.dropdown:hover .dropdown-menu {
+    background-color: whitesmoke;
+    display: block;
+}
+.l:hover{
+background-color: brown;
+
 }
