--- a/Day7/FrontendPractice/src/Css/Navbar.css
+++ b/Day7/FrontendPractice/src/Css/Navbar.css
@@ -2,11 +2,12 @@ ol{
     display:flex;
     justify-content: space-between;
     text-decoration: none;
+    
     list-style-type: none;
     margin:0; 
     padding:10px;
     background-color: rgb(22, 24, 27);
-    color:rgb(208, 60, 60);
+    color:rgb(252, 235, 235);
     font-size: large;
     font-weight: bold;
 }
@@ -17,7 +18,7 @@ ol{
 }
 .link:hover{
 
-    background-color:white;
+    background-color:rgb(191, 126, 126);
     color: rgb(9, 13, 135);
     border-radius: 10px;
 }
@@ -41,10 +42,6 @@ ol{
     padding: 10px;
 }
 .dropdown:hover .dropdown-menu {
-    background-color: whitesmoke;
+    background-color: rgb(207, 90, 90);
     display: block;
-}
-.l:hover{
-background-color: brown;
-
 }
