--- a/Day7/FrontendPractice/src/Css/Navbar.css
+++ b/Day7/FrontendPractice/src/Css/Navbar.css
@@ -18,8 +18,8 @@ ol{
 }
 .link:hover{
 
-    background-color:rgb(191, 126, 126);
-    color: rgb(9, 13, 135);
+    background-color:rgb(236, 213, 119);
+    color: rgb(33, 114, 124);
     border-radius: 10px;
 }
 .dropdown {
@@ -41,7 +41,10 @@ ol{
 .dropdown-menu li {
     padding: 10px;
 }
+.dropdown-menu{
+    display:none;
+}
 .dropdown:hover .dropdown-menu {
-    background-color: rgb(207, 90, 90);
+    background-color: rgb(138, 194, 240);
     display: block;
 }
